--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <a href="https://fierce-spire-9870.herokuapp.com/">linkki</a>
 
     <!-- Hyödyllisiä kirjastoja -->
     <script src="bower_components/angular/angular.min.js"></script>
